main/default/objects/Rating_Modifiers__c/Rating_Modifiers__c.object-meta.xml
<CustomObject>
    <label>Rating Modifier</label>
    <nameField>
        <label>Rating Modifiers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rating Modifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>