main/default/objects/Rating_Modifiers__c/fields/Controlling_Picklist_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Picklist_API_Name__c</fullName>
    <description>Used in order to fetch picklist values from API name especially for Dependent picklist logic</description>
    <label>Controlling Picklist API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>