main/default/objects/Rating_Modifiers__c/fields/Controlling_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Picklist_Value__c</fullName>
    <label>Controlling Picklist Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>