main/default/objects/Rating_Modifiers__c/fields/Dependent_Picklist_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Picklist_API_Name__c</fullName>
    <label>Dependent Picklist API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>