main/default/objects/Rating_Modifiers__c/fields/Dependent_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Picklist_Value__c</fullName>
    <label>Dependent Picklist Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>