main/default/objects/Rating_Modifiers__c/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <label>Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proceed</fullName>
                <color>#33CC00</color>
                <label>Proceed</label>
            </value>
            <value>
                <fullName>Proceed with Caution</fullName>
                <color>#F3D904</color>
                <label>Proceed with Caution</label>
            </value>
            <value>
                <fullName>Stop!Decline!</fullName>
                <color>#FF0000</color>
                <label>Stop!Decline!</label>
            </value>
            <value>
                <fullName>No Information</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution (consider restrictive terms, including but limited to matching/increasing retention to the largest paid loss)</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution (sub limit only)</fullName>
            </value>
            <value>
                <fullName>STOP! Higher Hazard (Unless fewer than 50 employees)</fullName>
            </value>
            <value>
                <fullName>STOP! Higher Hazard (unless Highly Compensated Separate Retention Endorsement is added)</fullName>
            </value>
            <value>
                <fullName>STOP! Higher Hazard (unless D&amp;O revenue threshold is met)</fullName>
            </value>
            <value>
                <fullName>STOP! Higher Hazard (seasonal, low wage,retail industries, etc.)</fullName>
            </value>
            <value>
                <fullName>STOP! Higher Hazard (Unless less than 100 employees)</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution and consider adding a Family Exclusion</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution and consider Major Shareholder Exclusion</fullName>
            </value>
            <value>
                <fullName>Proceed with Caution with sub-limit</fullName>
            </value>
            <value>
                <fullName>qualified or not all locations are audited</fullName>
            </value>
            <value>
                <fullName>Prohibited Class</fullName>
            </value>
            <value>
                <fullName>Munich Referral</fullName>
            </value>
            <value>
                <fullName>STOP! Higher Hazard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>