main/default/objects/Rating_Modifiers__c/fields/Factor_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Factor_Default_Value__c</fullName>
    <label>Factor Default Value</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>