main/default/objects/Rating_Modifiers__c/fields/Factor_Max__c.field-meta.xml
<CustomField>
    <fullName>Factor_Max__c</fullName>
    <label>Factor Max</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>