main/default/objects/Rating_Modifiers__c/fields/Factor_Min__c.field-meta.xml
<CustomField>
    <fullName>Factor_Min__c</fullName>
    <label>Factor Min</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>