main/default/objects/Rating_Modifiers__c/fields/Object_API_Name_of_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name_of_Picklist__c</fullName>
    <label>Object API Name of Picklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>