main/default/objects/Rating_Modifiers__c/fields/Order_of_Page_Section__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Page_Section__c</fullName>
    <label>Order of Page Section</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>