main/default/objects/Rating_Modifiers__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Cyber Standalone</fullName>
            </value>
            <value>
                <fullName>MPL Standalone</fullName>
            </value>
            <value>
                <fullName>Private Company Combo</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>EPL</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
            <value>
                <fullName>MPL</fullName>
            </value>
            <value>
                <fullName>Aqueous</fullName>
                <isActive>false</isActive>
                <label>Aqueous</label>
            </value>
            <value>
                <fullName>Cel1</fullName>
                <isActive>false</isActive>
                <label>Cel1</label>
            </value>
            <value>
                <fullName>D&amp;O Standalone</fullName>
                <isActive>false</isActive>
                <label>D&amp;O Standalone</label>
            </value>
            <value>
                <fullName>New Test</fullName>
                <isActive>false</isActive>
                <label>New Test</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
            <value>
                <fullName>Test Product 00</fullName>
                <isActive>false</isActive>
                <label>Test Product 00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>