main/default/objects/Rating_Modifiers__c/fields/Profile_Name_for_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name_for_Read_Only__c</fullName>
    <label>Profile Name for Read Only</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Celerity Senior Underwriter</fullName>
            </value>
            <value>
                <fullName>Celerity Junior Underwriter</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Aqueous Underwriter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>