main/default/objects/Rating_Modifiers__c/fields/Rating_Modifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Code__c</fullName>
    <label>Rating Modifier Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>