main/default/objects/Rating_Modifiers__c/fields/Rating_Modifier_Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Template_Code__c</fullName>
    <label>Rating Modifier Template Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>