main/default/objects/Rating_Modifiers__c/fields/Rating_Modifier_Value__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Value__c</fullName>
    <label>Rating Modifier Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>