main/default/objects/Rating_Modifiers__c/fields/Rating_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Rating_Reference_Name__c</fullName>
    <label>Rating Reference Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>