main/default/objects/Rating_Modifiers__c/fields/Sort_Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sort_Sub_Section__c</fullName>
    <label>Sort Sub Section</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>