main/default/objects/Rating_Modifiers__c/validationRules/Lock_Edit_When_Opportunity_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Edit_When_Opportunity_Closed_Won</fullName>
    <active>false</active>
    <description>If Opportunity Stage = Closed Won, all Rating Modifiers should be Read Only.</description>
    <errorConditionFormula>ISPICKVAL(Opportunity__r.StageName, &apos;Closed Won&apos;)</errorConditionFormula>
    <errorMessage>Can&apos;t create or update Rating Modifier when Opportunity status is Closed Won</errorMessage>
</ValidationRule>