main/default/objects/Rating_Modifiers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Rating_Modifier_Value__c</columns>
    <columns>Format__c</columns>
    <columns>Eligibility_Weighting_Factor__c</columns>
    <columns>Picklist_Values__c</columns>
    <columns>Eligibility_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>MPL</value>
    </filters>
    <label>All</label>
</ListView>