main/default/objects/Rating_Modifiers__c/listViews/Eligibility_Rating_Modifiers.listView-meta.xml
<ListView>
    <fullName>Eligibility_Rating_Modifiers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Page_Section__c</field>
        <operation>contains</operation>
        <value>Eligibility</value>
    </filters>
    <label>Eligibility Rating Modifiers</label>
</ListView>