main/default/objects/Rating_Modifiers__c/listViews/MPL_Rating_modifiers.listView-meta.xml
<ListView>
    <fullName>MPL_Rating_modifiers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>MPL</value>
    </filters>
    <label>MPL Rating modifiers</label>
</ListView>